--- a/stylesheets/custom.jumbotron.scss
+++ b/stylesheets/custom.jumbotron.scss
@@ -4,6 +4,7 @@
   position: relative;
   @include media-breakpoint-up(md) {
     padding: 3rem 1rem;
+    min-height: 32vh;
   }
 
   .container-jumbotron,
